# M5Tab5-UserDemo

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  TRACEPOINTS.md  fetch_repos.py  lv_conf.h  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: feature.yml
.github/scripts/: create_envs.sh
.github/workflows/: autofix-lint.yml  build.yml  clang-format-check.yml  codeql.yml  hil-boot-check.yml  host-tests.yml  idf-build-and-webflash.yml  idf-build.yml  idf-preflight.yml  lint-check.yml  lint.yml  release-please.yml  webflash.yml
DOCS/: DEV_SETUP.md  FLASH_LAYOUT.md  REPO_MAP.md
ai/tasks/: 00_preflight_build_and_bootloop_guard.md  TASK_TEMPLATE.md
app/: ui_home.c  ui_home.h
app/apps/app_launcher/: app_launcher.cpp
app/apps/app_launcher/view/: panel_sd_card.cpp  view.cpp  view.h
app/apps/app_startup_anim/: app_startup_anim.cpp  app_startup_anim.h
app/assets/: assets.h
components/: CMakeLists.txt
components/backup_server/: CMakeLists.txt  idf_component.yml
components/backup_server/include/backup_server/: backup_format.h  backup_server.h
components/backup_server/src/: backup_format.c  backup_server.c
components/connection_tester/: CMakeLists.txt  idf_component.yml
components/connection_tester/include/connection_tester/: connection_tester.h
components/connection_tester/src/: connection_tester.c
components/core/: CMakeLists.txt
components/core/include/: app_trace.h  ringbuf.h  settings.h  settings_impl.h
components/core/src/: ringbuf.cpp  settings.cpp
components/diag/: CMakeLists.txt  idf_component.yml
components/diag/include/diag/: diag.h
components/diag/src/: diag.c
components/net_sntp/: CMakeLists.txt  idf_component.yml
components/net_sntp/include/net_sntp/: net_sntp.h
components/net_sntp/src/: net_sntp.c
components/ota_update/: CMakeLists.txt  idf_component.yml
components/ota_update/include/ota_update/: ota_update.h
components/ota_update/src/: ota_update.c
components/settings_core/: CMakeLists.txt  idf_component.yml
components/settings_core/include/settings_core/: app_cfg.h
components/settings_core/src/: app_cfg.c  app_cfg_nvs.c
components/settings_ui/: CMakeLists.txt  idf_component.yml
components/settings_ui/include/settings_ui/: settings_ui.h
components/settings_ui/src/: settings_ui.c
custom/: .gitkeep  AGENTS.md  app_trace.h
custom/assets/: README.md  asset_mount.c  asset_mount.h
custom/assets/bg/: .gitkeep  bg_images.c  bg_images.h
custom/integration/: README.md  cctv_controller.cpp  cctv_controller.h  media_controller.cpp  media_controller.h  rooms_provider.c  rooms_provider.h  settings_controller.cpp  settings_controller.h  weather_formatter.cpp  weather_formatter.h
custom/integration/wifi/: hosted_safe.cpp  hosted_safe.h
custom/integration/wifi_remote/: hosted_safe.c  hosted_safe.h
custom/platform/: README.md
custom/ui/: README.md  ui_nav_rail.c  ui_nav_rail.h  ui_root.c  ui_root.h  ui_theme.c  ui_theme.h  ui_wallpaper.c  ui_wallpaper.h
custom/ui/pages/: ui_page_cctv.c  ui_page_cctv.h  ui_page_media.c  ui_page_media.h  ui_page_rooms.c  ui_page_rooms.h  ui_page_settings.c  ui_page_settings.h  ui_page_weather.c  ui_page_weather.h  ui_rooms_model.c  ui_rooms_model.h
custom/ui/widgets/: ui_room_card.c  ui_room_card.h
docs/: AGENTS.md  AI_Codex_Guide.md  AI_GUIDELINES.md  ARCHITECTURE.md  ASSETS.md  DEV_SETUP.md  I2C_MIGRATION.md  MQTT_CONTRACT.md  PERFORMANCE.md  REPO_MAP.md  TASKS.md  entities.json  mqtt_contract.md  wireframes.md
docs/prompts/: add_toggle_button.md  refactor_mqtt_init.md
scripts/: bootloop_guard.py  build.sh  check_idf_env.sh  check_legacy_i2c.py  format.sh  idf.py  preflight.sh  update_goldens.sh
tests/: CMakeLists.txt  lv_conf.h  lv_conf_host.h  test_check_legacy_i2c.py
tests/hil/: test_boot_no_loop.py
tests/ui/: CMakeLists.txt  media_page_test.c  rooms_page_snapshot.c  rooms_page_test.c  test_media_page.py  test_rooms_page.py  test_rooms_snapshot.cpp  test_settings_status.cpp  test_ui_snapshot.cpp
tests/ui/golden/: home_page.png.base64  rooms_three_cards.png.base64
tests/ui/stubs/assets/: assets.h  launcher_bg_stub.c
tests/unit/: test_app_cfg.cpp  test_ringbuf.cpp  test_settings.cpp  test_weather_formatter.cpp
tests/unit/stubs/: esp_err.h
tools/: check_secrets.sh  clang_tools.sh  gen_assets.py  install_idf.sh  lint_autofix.sh  run_clang_format.sh  run_clang_tidy.sh
